@@ -1,4 +1,4 @@
-package level;
+package freeToAll;
 
 import com.jagrosh.jdautilities.command.Command;
 import com.jagrosh.jdautilities.command.CommandEvent;
