@@ -1,4 +1,4 @@
-package level;
+package freeToAll;
 
 import net.dv8tion.jda.core.entities.Guild;
 import net.dv8tion.jda.core.entities.User;
