@@ -1,3 +1,6 @@
+2019-06-29 (v4.6.0):
+- Added BaguetteCommand.
+
 2019-06-29 (v4.5.1):
 - Sorted help message.
 - Sorted features in about message.
